force-app/main/default/objects/Jira__c/Jira__c.object-meta.xml
<CustomObject>
    <label>Jira</label>
    <nameField>
        <label>Jira Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jiras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>