force-app/main/default/objects/Jira__c/fields/Actual_Time_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_In_Seconds__c</fullName>
    <label>Actual Time In Seconds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>