force-app/main/default/objects/Jira__c/fields/Actual_Time_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_Tracking__c</fullName>
    <label>Actual Time Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>