force-app/main/default/objects/Jira__c/fields/Days_In_Done__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Done__c</fullName>
    <label>Days In Done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>