force-app/main/default/objects/Jira__c/fields/Days_In_InProgress__c.field-meta.xml
<CustomField>
    <fullName>Days_In_InProgress__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days In InProgress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>