force-app/main/default/objects/Jira__c/fields/Days_In_InQC__c.field-meta.xml
<CustomField>
    <fullName>Days_In_InQC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days In InQC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>