force-app/main/default/objects/Jira__c/fields/Difference_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Difference_In_Time__c</fullName>
    <formula>TEXT(FLOOR((Actual_Time_Tracking__c - Expected_Time_Tracking__c) * 24)) &amp; &quot; hours &quot; &amp;
TEXT(FLOOR(MOD((Actual_Time_Tracking__c - Expected_Time_Tracking__c) * 24 * 60, 60))) &amp; &quot; minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference In Time</label>
    <type>Text</type>
</CustomField>