force-app/main/default/objects/Jira__c/fields/Done_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>Done_Status_Count__c</fullName>
    <label>Done Status Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>