force-app/main/default/objects/Jira__c/fields/Expected_Time_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Expected_Time_Tracking__c</fullName>
    <label>Expected Time Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>