force-app/main/default/objects/Jira__c/fields/In_QC_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>In_QC_Status_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>In QC Status Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>