force-app/main/default/objects/Jira__c/fields/Last_Done_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Done_Date__c</fullName>
    <label>Last Done Date</label>
    <type>Date</type>
</CustomField>