force-app/main/default/objects/Jira__c/fields/Last_In_QC_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_In_QC_Date__c</fullName>
    <label>Last In QC Date</label>
    <type>Date</type>
</CustomField>