force-app/main/default/objects/Jira__c/fields/Last_To_Do_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_To_Do_Date__c</fullName>
    <label>Last To Do Date</label>
    <type>Date</type>
</CustomField>