force-app/main/default/objects/Jira__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <formula>TODAY() -    DATEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedDate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>