force-app/main/default/objects/Jira__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <label>ParentName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>