force-app/main/default/objects/Jira__c/fields/Related_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Item</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>Epic</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>Story</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>Bug</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Jira__c</referenceTo>
    <relationshipLabel>Jiras</relationshipLabel>
    <relationshipName>Jiras</relationshipName>
    <type>Lookup</type>
</CustomField>