force-app/main/default/objects/Jira__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jiras1</relationshipName>
    <type>Lookup</type>
</CustomField>