force-app/main/default/objects/Jira__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <description>Sprint Name</description>
    <label>Sprint</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>