force-app/main/default/objects/Jira__c/fields/Time_Difference__c.field-meta.xml
<CustomField>
    <fullName>Time_Difference__c</fullName>
    <label>Time Difference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>