force-app/main/default/objects/Jira__c/fields/To_Do_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>To_Do_Status_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>To Do Status Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>