force-app/main/default/objects/Jira__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Epic</fullName>
                <default>true</default>
                <label>Epic</label>
            </value>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>