force-app/main/default/objects/Jira__c/validationRules/AcceptInProgressAndDoneForInQC.validationRule-meta.xml
<ValidationRule>
    <fullName>AcceptInProgressAndDoneForInQC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;In QC&quot;),
    ISPICKVAL(Status__c, &quot;To Do&quot;)
)</errorConditionFormula>
    <errorMessage>Cannot update the &quot;Status&quot; value from &quot;In QC&quot; to &quot;To Do&quot;</errorMessage>
</ValidationRule>