force-app/main/default/objects/Jira__c/validationRules/AcceptInProgressForToDo.validationRule-meta.xml
<ValidationRule>
    <fullName>AcceptInProgressForToDo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;To Do&quot;),
    OR(
        ISPICKVAL(Status__c, &quot;In QC&quot;),
        ISPICKVAL(Status__c, &quot;Done&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Cannot update the &quot;Status&quot; value from &quot;To Do&quot; to &quot;In QC&quot; or &quot;Done&quot;</errorMessage>
</ValidationRule>