force-app/main/default/objects/Jira__c/validationRules/AcceptNoneForDone.validationRule-meta.xml
<ValidationRule>
    <fullName>AcceptNoneForDone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Done&quot;),
    OR(
        ISPICKVAL(Status__c, &quot;To Do&quot;),
        ISPICKVAL(Status__c, &quot;In Progress&quot;),
        ISPICKVAL(Status__c, &quot;In QC&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Cannot update the &quot;Status&quot; value from &quot;Done&quot; to any available options</errorMessage>
</ValidationRule>