force-app/main/default/objects/Jira__c/validationRules/AcceptToDoAndInQCForInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>AcceptToDoAndInQCForInProgress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;In Progress&quot;),
    ISPICKVAL(Status__c, &quot;Done&quot;)
)</errorConditionFormula>
    <errorMessage>Cannot update the &quot;Status&quot; value from &quot;In Progress&quot; to &quot;Done&quot;</errorMessage>
</ValidationRule>