force-app/main/default/objects/Jira__c/validationRules/OnlyForEpicRelatedItemBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyForEpicRelatedItemBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Related_Item__c),
    OR(
        ISPICKVAL(Type__c, &apos;Story&apos;),
        ISPICKVAL(Type__c, &apos;Bug&apos;),
        ISPICKVAL(Type__c, &apos;Task&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Cannot create story, task or bug without any related item</errorMessage>
</ValidationRule>