force-app/main/default/objects/Jira__c/validationRules/Rule_for_duedate.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_duedate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;In Progress&quot;),
    ISBLANK(DueDate__c)
)</errorConditionFormula>
    <errorMessage>The due date field should not be empty</errorMessage>
</ValidationRule>