force-app/main/default/objects/Jira__c/validationRules/Rule_for_epic_hierarchy.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_epic_hierarchy</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &apos;Epic&apos;),
    OR(

        ISPICKVAL(Related_Item__r.Type__c, &apos;Story&apos;),
        ISPICKVAL(Related_Item__r.Type__c, &apos;Epic&apos;),
        ISPICKVAL(Related_Item__r.Type__c, &apos;Task&apos;),
        ISPICKVAL(Related_Item__r.Type__c, &apos;Bug&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Epic cannot be created inside epic, story, task or bug</errorMessage>
</ValidationRule>