force-app/main/default/objects/Jira__c/validationRules/Rule_for_task_hierarchy.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_task_hierarchy</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &apos;Task&apos;),
    OR(
        ISPICKVAL(Related_Item__r.Type__c, &apos;Story&apos;),
        ISPICKVAL(Related_Item__r.Type__c, &apos;Task&apos;),
        ISPICKVAL(Related_Item__r.Type__c, &apos;Bug&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Task cannot be created inside story, task or bug</errorMessage>
</ValidationRule>