force-app/main/default/objects/Jira__c/validationRules/Summary_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Summary_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Summary__c)</errorConditionFormula>
    <errorMessage>The summary field should not be empty</errorMessage>
</ValidationRule>